--- a/easynvest-test/Base.lproj/LaunchScreen.storyboard
+++ b/easynvest-test/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina5_5" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,24 +13,26 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="easynvest-logo" translatesAutoresizingMaskIntoConstraints="NO" id="9LH-ap-KQd">
-                                <rect key="frame" x="87" y="248" width="240" height="240"/>
+                                <rect key="frame" x="16" y="162" width="343" height="343"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="9LH-ap-KQd" secondAttribute="height" multiplier="1:1" id="1dc-vM-ryn"/>
-                                    <constraint firstAttribute="height" constant="240" id="QWw-9R-THA"/>
-                                    <constraint firstAttribute="width" constant="240" id="RKz-b8-RR9"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="396" id="2nk-VG-vfd"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="396" id="OXG-aN-tjg"/>
                                 </constraints>
                             </imageView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.48613053560000002" green="0.11372549019607843" blue="0.46666666666666667" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="9LH-ap-KQd" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="KRr-BO-KNc"/>
+                            <constraint firstItem="9LH-ap-KQd" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="16" id="YvC-ga-pTV"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="9LH-ap-KQd" secondAttribute="trailing" constant="16" id="cy1-UR-8SD"/>
                             <constraint firstItem="9LH-ap-KQd" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="yn3-pX-AYg"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
